fixed the new page footbar shifting problem

--- a/app/assets/stylesheets/styles/pages/home.scss
+++ b/app/assets/stylesheets/styles/pages/home.scss
@@ -53,5 +53,9 @@
   cursor: pointer;
 }
 
+.formspacefolder {
+  height: 200px;
+  background-color: lemonchiffon;
+}
 
 
